# riceprobe

./: .gitignore  CMakeLists.txt  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  firmware.yml
app/: CMakeLists.txt  Kconfig  app.cmake  app.conf
app/boards/arm/rice_nucleo_h743zi/: Kconfig.board  Kconfig.defconfig  board.cmake  rice_nucleo_h743zi.dts  rice_nucleo_h743zi_defconfig
app/boards/arm/rice_nucleo_h743zi/support/: rtt.cfg
app/boards/arm/rice_samv71b_xult/: Kconfig.defconfig  rice_samv71b_xult.dts
app/boards/arm/rice_samv71b_xult/support/: openocd.cfg  rtt.cfg
app/dts/bindings/: rice_cmsis_dap.yaml  rice_dap.yaml  rice_io.yaml
app/src/: main.c  nvs.c  nvs.h  usb.c  usb.h  usb_util.h  util.h  winusb.c  winusb.h
app/src/dap/: commands.h  commands_general.c  commands_jtag.c  commands_jtag_swd.c  commands_swd.c  commands_swo.c  commands_transfer.c  dap.c  dap.h  jtag.c  jtag.h  tcp.c  transport.h  transport.ld  transport_usb.c  usb.c  usb.h
app/src/io/: commands.h  io.c  io.h  usb.c  usb.h
app/src/vcp/: usb.c  usb.h  vcp.c  vcp.h
docs/: index.md  non_volatile_data.md  test_hardware.md
firmware/: CMakeLists.txt  Kconfig  west.yml
firmware/boards/arm/rice_samv71b_xult/: Kconfig.board  Kconfig.defconfig  rice_samv71b_xult.dts  rice_samv71b_xult_defconfig
firmware/dts/bindings/: rice,dap.yaml  rice,io.yaml  rice,vcp.yaml  rice_vcp.yaml  vendor-prefixes.txt
firmware/src/: main.c  nvs.c  nvs.h  usb_msos.c  usb_msos.h  utf8.c  utf8.h  util.h
firmware/src/dap/: commands_general.c  commands_jtag.c  commands_swd.c  commands_swo.c  commands_transfer.c  dap.c  dap.h  tcp.c  transport_tcp.c  transport_usb.c
firmware/src/io/: commands_general.c  commands_gpio.c  commands_pinctrl.c  io.c  io.h  transport.h  transport.ld  transport_usb.c
firmware/src/vcp/: usb.h  vcp.c  vcp.h
firmware/tests/boards/native_sim_64/: native_sim_64.cmake  native_sim_64.overlay
firmware/tests/boards/native_sim_64/pinctrl/: pinctrl_sim.c
firmware/tests/boards/native_sim_64/pinctrl/include/: pinctrl_soc.h
firmware/tests/boards/native_sim_64/pinctrl/include/dt-bindings/pinctrl/: pinctrl_sim.h
firmware/tests/dap/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
firmware/tests/dap/boards/: native_posix_64.overlay
firmware/tests/dap/boards/pinctrl/: pinctrl_posix.c
firmware/tests/dap/boards/pinctrl/include/: pinctrl_soc.h
firmware/tests/dap/boards/pinctrl/include/dt-bindings/pinctrl/: pinctrl_posix.h
firmware/tests/dap/src/: dap_emul.c  dap_emul.h  dap_io.c  dap_io.h  dap_target_emul.c  dap_target_emul.h  dap_transport.c  dap_transport.h  main.c  main.h  test_general.c  test_jtag.c  test_swd.c  test_swo.c  test_transfer.c
firmware/tests/io/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
firmware/tests/io/boards/: native_posix_64.overlay
firmware/tests/io/src/: io_ios.h  io_transport.c  io_transport.h  main.c  test_general.c  test_gpio.c  test_pinctrl.c
firmware/tests/nvs/: CMakeLists.txt  prj.conf  testcase.yaml
firmware/tests/nvs/boards/: native_posix_64.overlay
firmware/tests/nvs/src/: main.c
firmware/tests/utf8/: CMakeLists.txt  prj.conf  testcase.yaml
firmware/tests/utf8/src/: main.c
firmware/tests/util/: gpio.h  print.h
mfg/: CMakeLists.txt  mfg.conf  mfg.overlay
mfg/src/: main.c
scripts/: requirements.txt
scripts/mfg/: README.md  gen_manufacturing_data_hex.py  write_manufacturing_data.py
scripts/mfg/firmware/: CMakeLists.txt  Kconfig  mfg.conf
scripts/openocd/: get_chip_uid.py  program.py  rtt.py  swo.py
scripts/openocd/config/: cmsis-dap-jtag.cfg  stm32l4x.cfg
scripts/tests/: conftest.py  test_dap.py  test_dap_jtag.py  test_dap_swd.py  test_io.py  test_openocd.py  test_usb.py  test_vcp.py
scripts/tests/firmware/: CMakeLists.txt  target.conf
scripts/tests/firmware/src/: main.c  swo.c
scripts/tests/fixtures/: dap.py  io.py  openocd.py
tests/: test_usb.py  util.h
tests/dap/: CMakeLists.txt  testcase.yaml
tests/dap/boards/: native_posix_64.overlay  pinctrl_soc.h
tests/dap/src/: test_general.c
tests/nvs/: CMakeLists.txt  testcase.yaml
west/: west.yml
